--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "i18n-iso-countries": "^7.11.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-image-gallery-slider": "^1.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.0",
-    "sass": "^1.77.8",
-    "styled-components": "^6.1.12"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -32,8 +33,6 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
 }
