--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.0",
